// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuiPlugins tools filter android + US as expected 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "phony",
    "title": "Credit card",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Wire transfer",
  },
]
`;

exports[`GuiPlugins tools filter ios + JP as expected 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Nice lawsuit",
  },
]
`;

exports[`GuiPlugins tools filter ios + US - gox as expected 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "/applePay",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "applepay",
    ],
    "pluginId": "phony",
    "title": "Apple Pay",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "phony",
    "title": "Credit card",
  },
]
`;

exports[`GuiPlugins tools filter ios + US as expected 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "/applePay",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "applepay",
    ],
    "pluginId": "phony",
    "title": "Apple Pay",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Wire transfer",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "phony",
    "title": "Credit card",
  },
]
`;

exports[`Production plugin data Buy plugins match snapshot on android + IL 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 5-7%
Settlement: 10 - 30 minutes",
    "paymentType": "googlepay",
    "paymentTypeLogoKey": "googlepay",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "creditcard",
    "title": "Google Pay",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 5-7%
Settlement: 10 - 30 minutes",
    "paymentType": "credit",
    "paymentTypeLogoKey": "credit",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "creditcard",
    "title": "Credit and Debit Card",
  },
  {
    "cryptoCodes": [
      "BTC",
      "ETH",
    ],
    "deepPath": "/order/buy",
    "deepQuery": {
      "order_id": "null",
      "page": "0",
    },
    "description": "Fee: 5.95%
Settlement: 1 - 48 hours",
    "partnerIconPath": "bits-of-gold-logo-sm.png",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": [
      "bank",
    ],
    "pluginId": "bitsofgold",
    "title": "Israeli Bank Transfer",
  },
]
`;

exports[`Production plugin data Buy plugins match snapshot on iOS + US 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 4-5%
Settlement: 1 - 4 days",
    "paymentType": "iach",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": [
      "iach",
    ],
    "pluginId": "iach",
    "title": "ACH Bank Transfer",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 5-7%
Settlement: 10 - 30 minutes",
    "paymentType": "applepay",
    "paymentTypeLogoKey": "applepay",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "creditcard",
    "title": "Apple Pay",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 5-7%
Settlement: 10 - 30 minutes",
    "paymentType": "credit",
    "paymentTypeLogoKey": "credit",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "creditcard",
    "title": "Credit and Debit Card",
  },
  {
    "cryptoCodes": [
      "BTC",
    ],
    "deepPath": "/",
    "deepQuery": {},
    "description": "Fee: 3-8%
Settlement: Instant",
    "partnerIconPath": "libertyXlogo.png",
    "paymentTypeLogoKey": "cash",
    "paymentTypes": [
      "cash",
      "credit",
    ],
    "pluginId": "libertyx",
    "title": "In-person Cash and Debit Card",
  },
]
`;

exports[`Production plugin data Sell plugins match snapshot on iOS + US 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 4-5% / Settlement: 1 - 4 days",
    "partnerIconPath": "moonpay_symbol_prp.png",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "moonpay",
    "title": "ACH Bank Transfer",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Buy prepaid, single-load Visa® cards
Fee: 0% / Settlement: Instant
Limit: $1,000 per card, $10,000 per day
",
    "paymentType": "credit",
    "paymentTypeLogoKey": "visa",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "rewardscard",
    "title": "Visa® Card Program",
  },
  {
    "cryptoCodes": [
      "BTC",
      "DASH",
      "DOGE",
      "ETH",
      "LTC",
    ],
    "deepPath": "",
    "deepQuery": {},
    "description": "Buy gift cards and reload phones with crypto",
    "partnerIconPath": "bitrefill-2.png",
    "paymentTypeLogoKey": "giftcard",
    "paymentTypes": [
      "giftcard",
    ],
    "pluginId": "bitrefill",
    "title": "Gift Cards",
  },
]
`;
